--- a/centroid_mapping.ipynb
+++ b/centroid_mapping.ipynb
@@ -98,8 +98,7 @@
    "source": [
     "import os\n",
     "#This should point to the directory that contains your data\n",
-    "#os.chdir('~/data/')\n",
-    "os.chdir('/Users/maddieurbanek/Desktop/box_stuff/')"
+    "#os.chdir('~/data/')\n"
    ]
   },
   {
