--- a/centroid_mapping.ipynb
+++ b/centroid_mapping.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "###### centroid_assignment.csv: cell type assignments for all sample cells\n",
     "###### corr_scores.csv: (optional) correlation coefficients for each cell x centroid combo\n",
-    "###### filtered)assignments.csv: cell type assignments after thresholding on max correlation coefficient scores\n",
+    "###### filtered_assignments.csv: cell type assignments after thresholding on max correlation coefficient scores\n",
     "###### sample_coords.csv: embeddings for all sample cells to plot onto a reference atlas\n",
     "###### figs: directory with different UMAP and correlation visualizations"
    ]
